--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -361,6 +361,7 @@ main #selectCategory {
 main #selectCategory img {
   width: 50px;
   height: auto;
+  cursor: pointer;
 }
 main #selectCategory ul {
   width: 70%;
@@ -369,6 +370,9 @@ main #selectCategory ul {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  border-radius: 20px;
+  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
+  border: 1px solid #353535;
 }
 main #selectCategory ul li {
   list-style: none;
