--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -366,7 +366,7 @@ main{
                 list-style: none;
                 cursor: pointer;
                 font-size: $lg;
-                color: $lightFontColor;
+                color: $darkFontColor;
             }
             li:hover{
                 border-bottom: 1px solid $darkFontColor;
