New feature in briefcase section

--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -130,6 +130,7 @@ nav header .mobileHeader ul #catalogo:hover {
   width: 250px;
   height: 100%;
   position: fixed;
+  left: 0px;
   display: none;
   z-index: 11000;
   background-color: #e3e3e3;
