--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -240,7 +240,7 @@ main {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  margin-top: 120px;
+  padding-top: 120px;
   gap: 20px;
 }
 main #categorySection {
