--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -291,8 +291,8 @@ main #categorySection .links {
   gap: 15px;
 }
 main #categorySection .links div {
-  width: 130px;
-  height: 120px;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
