--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -291,8 +291,8 @@ main #categorySection .links {
   gap: 15px;
 }
 main #categorySection .links div {
-  width: 100%;
-  height: 100%;
+  width: 130px;
+  height: 120px;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -303,6 +303,12 @@ main #categorySection .links div {
   transition: all 0.3s ease;
   cursor: pointer;
   gap: 10px;
+}
+@media screen and (max-width: 400px) {
+  main #categorySection .links div {
+    width: 100px;
+    height: 90px;
+  }
 }
 main #categorySection .links div span {
   width: 100%;
