--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -271,12 +271,14 @@ main{
         @include sizes();
         overflow: hidden;
         position: relative;
+        border: 2px solid black;
 
         .slides{
             height: 100vh;
             display: flex;
             flex-direction: column;
             transition: transform 0.8s ease-in-out;
+            border: 3px solid blue;
 
             div{
                 width: 100%;
@@ -285,6 +287,7 @@ main{
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
+                border: 2px solid red;
 
                 button{
                     @include sizes(180px, 50px);
@@ -298,6 +301,7 @@ main{
                     font-family: $afacadFont;
                     font-size: $lg;
                     margin-bottom: -100px;
+                    border: 1px solid orange;
 
                     img{
                         @include sizes(30px,auto);
