--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -1,6 +1,6 @@
 //Variables
 $backgroundImage: linear-gradient(to top, #fcddd4 0%, #e8dad0 100%);
-$secondBackgroundImage: linear-gradient(-225deg, #b6f8e4 0%, #FFE6FA 100%);
+$secondBackgroundImage: linear-gradient(-225deg, #e0e0e0 0%, #FFE6FA 100%);
 $cardBackgroundImage: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 $lightBackgroundImage: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
 $sm: 12px;
