--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -3,7 +3,7 @@
 
 //Variables
 $backgroundImage: linear-gradient(to top, #fcddd4 0%, #e8dad0 100%);
-$secondBackgroundImage: linear-gradient(-225deg, #e0e0e0 0%, #FFE6FA 100%);
+$secondBackgroundImage: linear-gradient(-225deg, #b9f3d3 0%, #FFE6FA 100%);
 $cardBackgroundImage: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
 $lightBackgroundImage: linear-gradient(to top, #c1dfc4 0%, #deecdd 100%);
 $sm: 12px;
