--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -433,8 +433,8 @@ main .category div {
   padding-top: 20px;
 }
 main .category div div {
-  width: 400px;
-  height: 700px;
+  width: 350px;
+  height: 600px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -453,17 +453,15 @@ main .category div div div {
   padding-top: 0px;
 }
 main .category div div div .medidas-content {
-  width: 95%;
-  height: 40px;
+  width: 100%;
+  height: 50px;
   display: flex;
   justify-content: center;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   position: absolute;
   bottom: 50px;
   padding: 5px;
-  border-radius: 60px;
-  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.318);
 }
 main .category div div div .medidas-content table {
   display: flex;
@@ -506,15 +504,14 @@ main .category div div div span {
   flex-direction: row;
   align-items: center;
   font-size: 23px;
-  background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
 }
 main .category div div div span button {
-  width: 120px;
-  height: 30px;
+  width: 150px;
+  height: 40px;
   background-image: linear-gradient(-225deg, #E3FDF5 0%, #FFE6FA 100%);
   border: 1px solid #353535;
   border-radius: 60px;
-  font-size: 14px;
+  font-size: 23px;
   cursor: pointer;
   transition: all 0.3s ease;
   font-family: "Afacad Flux", sans-serif;
@@ -522,18 +519,27 @@ main .category div div div span button {
 main .category div div div span button:hover {
   transform: scale(1.05);
 }
+main .category div div div .product-name {
+  font-size: 23px !important;
+  padding-left: 5px;
+  justify-content: flex-start;
+  border-radius: 0px;
+}
 main .category div div div .product-talla {
-  width: 100px;
+  width: 90px;
   height: 60px;
   position: absolute !important;
+  font-size: 23px;
+  font-weight: 600;
   top: 0px;
   right: 10px;
-  background-image: linear-gradient(to top, #a18cd1 0%, #fbc2eb 100%);
-  border-radius: 5px;
-  box-shadow: 0px 5px 15px 1px rgba(0, 0, 0, 0.371);
+  background-color: #e3e3e3;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 main .category div div div .product-description {
-  font-size: 16px !important;
+  font-size: 18px !important;
+  text-align: left;
   height: 50px !important;
   -webkit-backdrop-filter: blur(1px) !important;
           backdrop-filter: blur(1px) !important;
@@ -541,14 +547,11 @@ main .category div div div .product-description {
   position: absolute;
   bottom: 100px;
 }
-main .category div div div span:first-child {
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-}
-main .category div div div span:nth-child(3) {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  height: 40px;
+main .category div div div .product-price {
+  background-color: #353535;
+  color: #e3e3e3;
+  border-radius: 0px !important;
+  border-top-right-radius: 60px;
   font-size: 28px;
   font-weight: 600;
 }
