--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -430,6 +430,8 @@ main{
                         position: absolute;
                         bottom: 50px;
                         padding: 5px;
+                        backdrop-filter: blur(2px);
+                        box-shadow: none;
 
                         table{
                             @include displayFlex($flexDirection: row);
@@ -476,6 +478,7 @@ main{
                         padding-left: 5px;
                         justify-content: flex-start;
                         border-radius: 0px;
+                        font-weight: $bold;
                     }
                     .product-talla{
                         @include sizes(90px,60px);
@@ -492,10 +495,11 @@ main{
                         font-size: 18px !important;
                         text-align: left;
                         height: 50px !important;
-                        backdrop-filter: blur(1px) !important;
+                        backdrop-filter: blur(2px) !important;
                         border-radius: 0px !important;
                         position: absolute;
                         bottom: 100px;
+                        font-weight: $bold;
                     }
                     .product-price{
                         background-color: $darkFontColor;
