--- a/public/styles/catalogo.css
+++ b/public/styles/catalogo.css
@@ -473,6 +473,7 @@ main .category div div div .medidas-content table {
   align-items: center;
   width: 100%;
   height: 100%;
+  color: #e3e3e3;
 }
 main .category div div div .medidas-content table tr {
   display: flex;
@@ -551,6 +552,7 @@ main .category div div div .product-description {
   position: absolute;
   bottom: 100px;
   font-weight: 600;
+  color: #e3e3e3;
 }
 main .category div div div .product-price {
   background-color: #353535;
