--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -500,7 +500,7 @@ main{
                         border-radius: 0px !important;
                         position: absolute;
                         bottom: 100px;
-                        font-weight: $bold;
+                        font-weight: 500;
                         color: $lightFontColor;
                     }
                     .product-price{
